added all endpoints